_logs_y_tests/dev_output.txt

> transformafacil-frontend@1.0.1-CACHEBUST-1737694665421 dev
> vite --port 3005 --strictPort

node.exe : [31merror when 
starting dev server:
En línea: 1 Carácter: 1
+ & "C:\Program 
Files\nodejs/node.exe" 
"C:\Program 
Files\nodejs/node_mo ...
+ ~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~~~~~~~~~~~
~~~~~~~~~~~~~~~~~
    + CategoryInfo         
     : NotSpecified: ([3  
  1merror when starting    
 dev server::String) []    
, RemoteException
    + FullyQualifiedErrorI 
   d : NativeCommandError
 
Error: Port 3005 is 
already in use
    at Server.onError$1 (fi
le:///C:/Users/jonat/Deskto
p/PROYECTOS/TransformaFacil
-2.0/frontend/node_modules/
vite/dist/node/chunks/confi
g.js:14933:28)
    at Server.emit 
(node:events:508:28)
    at emitErrorNT 
(node:net:1984:8)
    at process.processTicks
AndRejections (node:interna
l/process/task_queues:90:21
)[39m
